--- a/clase09/style.css
+++ b/clase09/style.css
@@ -6,6 +6,7 @@ header{
     width: 100%;
     height: 100px;
     background-color: rgba(50, 150, 150, 1);
+    font-size: 56px;
 }
 
 nav{
@@ -46,4 +47,15 @@ footer{
     width: 100%;
     height: 100px;
     background-color: rgba(100, 10, 150, 1);
+    font-size: 36px;
+}
+
+@media screen and (max-width: 768px) {
+    header {
+        font-size: 24px;
+    }
+    
+    footer {
+        font-size: 14px;
+    }
 }
