--- a/clase09/style.css
+++ b/clase09/style.css
@@ -52,10 +52,20 @@ footer{
 
 @media screen and (max-width: 768px) {
     header {
-        font-size: 24px;
+        font-size: 34px;
     }
     
     footer {
+        font-size: 26px;
+    }
+}
+
+@media screen and (max-width: 468px) {
+    header {
         font-size: 14px;
+    }
+    
+    footer {
+        font-size: 10px;
     }
 }
